# gist-demo

./: Dockerfile  Jenkinsfile  README-PROJECT.md  README.md  dockerignore  gitignore  pyproject.toml
gist_api/: main.py
tests/: conftest.py  test_main.py
