[project]
name = "gist-api"
version = "0.1.0"
description = "Sample List Gists API"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi==0.134.0",
    "httpx==0.28.1",
    "uvicorn==0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]
